crates/perl-lsp-rs/tests/snapshots/lsp_cap_snap__code_action_kinds.snap
---
source: crates/perl-lsp-rs/tests/lsp_cap_snap.rs
assertion_line: 73
expression: "&kinds"
---
- quickfix
- source.organizeImports
- refactor
- refactor.extract
- refactor.inline
- refactor.rewrite
- source.fixAll
