crates/perl-lsp-rs/tests/snapshots/lsp_cap_snap__completion_trigger_characters.snap
---
source: crates/perl-lsp-rs/tests/lsp_cap_snap.rs
assertion_line: 93
expression: "&triggers"
---
- $
- "@"
- "%"
- "-"
- ">"
- ":"
- /
- "\\"
- "\""
- "'"
