crates/perl-lsp-rs/tests/snapshots/lsp_cap_snap__execute_command_ids.snap
---
source: crates/perl-lsp-rs/tests/lsp_cap_snap.rs
expression: "&commands"
---
- perl.runTests
- perl.runFile
- perl.runTestSub
- perl.runCritic
- perl.runTest
- perl.runTestFile
- perl.runSubtest
- perl.debugFile
- perl.debugTest
- perl.debugTestFile
- perl.goToTest
- perl.goToImplementation
- perl.explainProviderDecision
- perl.workspaceTrustReport
- perl.previewSafeDelete
- perl.safeDeleteSymbol
- perl.previewPackageRename
- perl.explainMissingModuleLookup
