crates/perl-lsp-rs/tests/snapshots/lsp_cap_snap__execute_command_provider_commands.snap
---
source: crates/perl-lsp-rs/tests/lsp_cap_snap.rs
assertion_line: 183
expression: "&commands"
---
- perl.runTests
- perl.runFile
- perl.runTestSub
- perl.runCritic
- perl.runTest
- perl.runTestFile
- perl.runSubtest
- perl.debugFile
- perl.debugTest
- perl.goToTest
- perl.goToImplementation
