crates/perl-lsp-rs/tests/snapshots/lsp_cap_snap__semantic_tokens_legend_from_capabilities.snap
---
source: crates/perl-lsp-rs/tests/lsp_capability_snapshot_test.rs
expression: "&legend"
---
tokenModifiers:
  - declaration
  - definition
  - readonly
  - static
  - deprecated
  - abstract
  - async
  - modification
  - documentation
  - defaultLibrary
  - scalarVariable
  - arrayVariable
  - hashVariable
tokenTypes:
  - namespace
  - type
  - class
  - interface
  - enum
  - enumMember
  - typeParameter
  - function
  - method
  - property
  - macro
  - variable
  - parameter
  - keyword
  - modifier
  - comment
  - string
  - number
  - regexp
  - operator
  - sql_string
  - sql_heredoc_keyword
  - json_heredoc_key
