crates/perl-lsp-rs/tests/snapshots/lsp_cap_snap__server_info_name.snap
---
source: crates/perl-lsp-rs/tests/lsp_capability_snapshot_test.rs
expression: "&name"
---
perl-lsp
