crates/perl-lsp-rs/tests/snapshots/lsp_cap_snap__signature_help_provider.snap
---
source: crates/perl-lsp-rs/tests/lsp_cap_snap.rs
expression: "&signature_help"
---
retriggerCharacters:
  - ","
  - "@"
  - "%"
  - "{"
  - "["
triggerCharacters:
  - (
  - ","
