crates/perl-lsp-rs/tests/snapshots/lsp_cap_snap__signature_help_triggers.snap
---
source: crates/perl-lsp-rs/tests/lsp_cap_snap.rs
assertion_line: 113
expression: "&signature_help"
---
retriggerCharacters:
  - ","
  - "@"
  - "%"
  - "{"
  - "["
triggerCharacters:
  - (
  - ","
